# Checksum-calculator

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/calculators/: CMakeLists.txt  CalculatorFactory.cpp  CalculatorFactory.hpp  ChecksumCalculator.hpp  Md5Calculator.cpp  Md5Calculator.hpp  SHA1Calculator.cpp  SHA1Calculator.hpp  SHA256Calculator.cpp  SHA256Calculator.hpp
src/directory-iteration-visitors/: CMakeLists.txt  DirectoryIterationVisitor.cpp  DirectoryIterationVisitor.hpp  HashStreamWriter.cpp  HashStreamWriter.hpp  ReportWriter.cpp  ReportWriter.hpp  VerificationVisitor.cpp  VerificationVisitor.hpp
src/directory-tree-builders/: BaseBuilder.cpp  BaseBuilder.hpp  CMakeLists.txt  CycleDetector.cpp  CycleDetector.hpp  DetectionStrategy.hpp  DirectoryConstructor.cpp  DirectoryConstructor.hpp  DirectoryStructureBuilder.hpp  LinkFollowBuilder.cpp  LinkFollowBuilder.hpp  NonFollowLinkBuilder.cpp  NonFollowLinkBuilder.hpp
src/file-system-composite/: CMakeLists.txt  Directory.cpp  Directory.hpp  File.cpp  File.hpp  FileObject.cpp  FileObject.hpp  Link.cpp  Link.hpp
src/progress-indicator-observers/: CMakeLists.txt  Message.hpp  Observable.cpp  Observable.hpp  Observer.hpp  ProgressReporter.cpp  ProgressReporter.hpp
src/utils/: CMakeLists.txt  ChecksumFileReader.cpp  ChecksumFileReader.hpp  VerificationResultPrinter.cpp  VerificationResultPrinter.hpp
tests/: CMakeLists.txt
tests/progress-indicator-tests/: test_observable.cpp  test_progress_reporter.cpp
tests/test-builders/: test_directory_constructor.cpp  test_follow_link_builder.cpp  test_non_follow_link_builder.cpp
tests/test-calculators/: test_md5.cpp  test_sha256.cpp
tests/test-file-system/: test_directory.cpp  test_file.cpp  test_link.cpp
tests/test-utils/: test-cycle-detector.cpp  test_checksum_file_reader.cpp  test_verification_result_printer.cpp
tests/test-visitors/: test_hash_writer.cpp  test_report_writer.cpp  test_verification_visitor.cpp
tests/test_calculators/: test_md5.cpp  test_sha1.cpp
